
<resources>

    <string name="app_name">FOODCHEAP</string>
    <string name="FOODCHEAP">FOODCHEAP</string>
    <string name="getstarted">Get started</string>
    <string name="next">next</string>
    <string name="우리동네마감음식찾기">우리동네 마감음식 찾기</string>
    <string name="설명1멘트1">음식을 파는 가게에서 음식이 남으면 버리기가 아쉽지 않으세요?</string>
    <string name="설명1멘트2">우리는 이러한 문제들을 해결해준답니다!\n바로 FOODCHEAP 을 통해서 말이죠!</string>
    <string name="설명2멘트1">당신의 취향대로 음식을 고르세요!</string>
    <string name="설명2멘트2">서비스를 제공하는 가게에서 음식이 있다면\n 당신은 살 수 있답니다!</string>
    <string name="설명3멘트1">배달 &amp; 픽업</string>
    <string name="설명3멘트2">FOODCHEAP은 배달과 픽업 모두 지원한답니다.\n퇴근길, 하굣길, 집에서\n편하게 이용하세요!</string>
    <string name="설명4멘트1">학생 후원 서비스</string>
    <string name="설명4멘트2">당신은 너그러운 사장님이십니다.\n후원 서비스를 이용해주세요!</string>
    <string name="로그인멘트1">FOODCHEAP에 오신 것을 환영합니다.</string>
    <string name="유저아이디">User ID</string>
    <string name="유저패스워드">User Password</string>
    <string name="로그인">LOG-IN</string>
    <string name="페이스북으로계속">Continue with Facebook</string>
    <string name="구글로계속">Continue with Google</string>
    <string name="새로운계정">새로운 계정이 필요하신가요?</string>
    <string name="회원가입">Sign Up</string>
    <string name="우리동네환경지킴이">우리동네 환경지킴이</string>
    <string name="쿠키네식료품">쿠키네 식료품</string>
    <string name="쿠키네주소">대전광역시 궁동 123-456 쿠키빌라 101호</string>
    <string name="후원관리">후원 관리</string>
    <string name="후원">후원</string>
    <string name="배고픈학생들">배고픈 학생들을 도와주세요!</string>
    <string name="방법이궁금해요">방법이 궁금해요!</string>
    <string name="후원자목록">후원자 목록</string>
    <string name="후원상품추가">후원 상품 추가</string>
    <string name="후원자공지사항">후원자 공지사항</string>
    <string name="후원자후기">후원자 후기</string>
    <string name="후원금액">후원 금액</string>
    <string name="이번달후원액">이번 달 총 후원액</string>
    <string name="오늘의후원액">오늘의 후원</string>
    <string name="이십이만원">220,000</string>
    <string name="사만삼천원">43,000</string>
    <string name="고객센터">고객센터</string>
    <string name="고객센터번호">1577-1234</string>
    <string name="채팅으로상담원연결">채팅으로 상담원 연결</string>



</resources>