<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <TextView
            android:text="@string/로그인멘트1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/mainText"
            android:textSize="21dp"
            android:textStyle="bold"
            android:textColor="@color/녹색"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.056"
    />

    <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp" app:srcCompat="@drawable/broccoli" android:id="@+id/imageView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.502" app:layout_constraintVertical_bias="0.155"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="334dp"
            android:layout_height="148dp"
            android:background="@drawable/idpassword"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.437" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.508"
            android:id="@+id/constraintLayout">

        <TextView
                android:text="@string/유저아이디"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintVertical_bias="0.122"/>
        <TextView
                android:text="@string/유저패스워드"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.072"
                app:layout_constraintVertical_bias="0.618"/>
        <EditText
                android:id="@+id/inputID"
                android:layout_width="308dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:textSize="17dp"
                android:backgroundTint="@color/연두색1"
                android:textColor="@color/black"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintVertical_bias="0.313"/>
        <EditText
                android:id="@+id/inputPW"
                android:layout_width="308dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:textSize="17dp"
                android:backgroundTint="@color/연두색1"
                android:textColor="@color/black"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintVertical_bias="0.931"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
            android:text="@string/로그인"
            android:textSize="17dp"
            android:textStyle="bold"
            android:background="@drawable/login_button"
            android:layout_width="334dp"
            android:layout_height="58dp" android:id="@+id/log_in_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintVertical_bias="0.619"/>
    <TextView
            android:text="or"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.698" app:layout_constraintHorizontal_bias="0.498"/>
    <View
            android:layout_width="138dp"
            android:layout_height="2px"
            android:background="#60000000"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.878" app:layout_constraintVertical_bias="0.696"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/view"/>
    <View
            android:layout_width="138dp"
            android:layout_height="2px"
            android:background="#60000000"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.117" app:layout_constraintVertical_bias="0.696"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/페이스북으로계속"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:background="@drawable/continue_button"
            android:drawableLeft="@drawable/facebook_button"
            android:paddingLeft="40dp"
            android:paddingRight="35dp"
            android:textAllCaps="false"
            android:layout_width="334dp"
            android:layout_height="45dp" android:id="@+id/ctn_facebook_button"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.491" app:layout_constraintVertical_bias="0.784"/>
    <Button
            android:text="@string/구글로계속"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:background="@drawable/continue_button"
            android:drawableLeft="@drawable/google_button"
            android:paddingLeft="40dp"
            android:paddingRight="35dp"
            android:textAllCaps="false"
            android:layout_width="334dp"
            android:layout_height="45dp" android:id="@+id/ctn_google_button"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.491" app:layout_constraintVertical_bias="0.86"/>
    <TextView
            android:text="@string/새로운계정"
            android:textSize="17dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.239"
            app:layout_constraintVertical_bias="0.932"/>
    <TextView
            android:text="@string/회원가입"
            android:textSize="19dp"
            android:textColor="@color/연두색1"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/signUpText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.854"
            app:layout_constraintVertical_bias="0.935"/>
</androidx.constraintlayout.widget.ConstraintLayout>